# cassandra_2026

./: README.md  pyproject.toml
cassandra_2026/systems/filez/: cli.py  common.py  example_zero.py  model.py  repo.py  statements.py  uploader.py
cassandra_2026/systems/filez/cli/: main.py  repository.py
cassandra_2026/systems/filez/cluster_setup/: docker-compose.yml  installation_notes.md
cassandra_2026/systems/filez/migrations/: m_2.cql
cassandra_2026/systems/readings/: models.py  repository.py  usage.py
cassandra_2026/systems/readings/migrations/: m_1.cql
cassandra_2026/systems/readings/todos/: todo_1.md
